:green_heart: fix : sonar integration