@@ -180,7 +180,13 @@
       <version>0.8.8</version>
     </dependency>
 
-	</dependencies>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
 
 	<build>
 		<plugins>
@@ -191,9 +197,9 @@
         <version>3.11.0</version>
         <configuration>
           <release>${java.version}</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+<!--          <compilerArgs>-->
+<!--            <arg>&#45;&#45;enable-preview</arg>-->
+<!--          </compilerArgs>-->
         </configuration>
       </plugin>
 
@@ -202,9 +208,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.1.2</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
+<!--        <configuration>-->
+<!--          <argLine>&#45;&#45;enable-preview</argLine>-->
+<!--        </configuration>-->
       </plugin>
 
 			<!-- Spring Boot Maven plugin for packaging and running the application -->
